corrected a refrence mistake

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="project-wrapper">
         <header>
-            <img src="/images/logo-bookmark.svg" alt="logo" class="logo1">
+            <img src="./images/logo-bookmark.svg" alt="logo" class="logo1">
             
             <nav>
                 <ul>
